// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resetPassword query INVALID_ARGUMENT_AUTH fail should handle backend gracefully 1`] = `
Object {
  "data": Object {
    "resetPassword": null,
  },
  "errors": Array [
    [GraphQLError: No authentication credentials.],
  ],
}
`;

exports[`resetPassword query INVALID_ARGUMENT_LOGIN fail should handle backend gracefully 1`] = `
Object {
  "data": Object {
    "resetPassword": null,
  },
  "errors": Array [
    [GraphQLError: Invalid email address provided.],
  ],
}
`;

exports[`resetPassword query INVALID_LOGIN fail should handle backend gracefully 1`] = `
Object {
  "data": Object {
    "resetPassword": null,
  },
  "errors": Array [
    [GraphQLError: Login failed.],
  ],
}
`;

exports[`resetPassword query INVALID_METHOD fail should handle backend gracefully 1`] = `
Object {
  "data": Object {
    "resetPassword": null,
  },
  "errors": Array [
    [GraphQLError: Password reset has not been successful.],
  ],
}
`;
